force/src/objects/MPM4_BASE__Milestone1_Resource__c.object
<CustomObject>
    <fields>
        <fullName>MPM4_BASE__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Resource_Skills__c</fullName>
        <label>Resource Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MPM4_BASE__Must_enter_contact_or_user</fullName>
        <active>true</active>
        <description>User must enter either a contact or user before saving the the resource.</description>
        <errorConditionFormula>OR(AND(MPM4_BASE__Contact__c = null, MPM4_BASE__User__c = null), AND(MPM4_BASE__Contact__c != null, MPM4_BASE__User__c != null))</errorConditionFormula>
        <errorMessage>You must enter either a contact or user before saving the the resource.</errorMessage>
    </validationRules>
</CustomObject>